# muMatch

./: README.md  pyproject.toml  scalar_plotting.ipynb  setup.cfg
src/micro_match/: _version.py  pipeline.py
src/micro_match/correspondence/: match.py
src/micro_match/correspondence/functional_maps/: functional_mapping.py
src/micro_match/correspondence/product_manifold_filters/: assignment_functors.py
src/micro_match/deep_functional_maps/: training.py
src/micro_match/preprocessing/: feature_descriptors.py  manual_partition.py  preprocess.py  shot_descriptor.py
src/micro_match/preprocessing/deep_functional_maps/: data_loading.py  optimise_signatures.py
src/micro_match/shape_analysis/: shape_alignment.py
src/micro_match/tools/: geometric_utilities.py  mapping_viewer.py  mesh_class.py  visu_vedo.py
